--- a/WEB-INF/classes/rus_en.properties
+++ b/WEB-INF/classes/rus_en.properties
@@ -20,7 +20,7 @@ Archivio=Archive
 PayPal_-_Il_sistema_di_pagamento_online_piu'_facile_e_sicuro!=PayPal - The easiest and safest online payment system!
 Il_mio_account=My account
 Dettaglio_Account=Account Detail
-Esci=You go out
+Esci=Logout
 Facebook=Facebook
 Foto_Sport=Sports Photos
 Sport=Sport
@@ -147,3 +147,40 @@ Motivo_della_richiesta_di_iscrizione=Reason for requesting registration
 Iscrizione_Atletica_Immagine=Atletica Immagine Registration
 ATTENZIONE!_Alcuni_campi_non_sono_stati_compilati=ATTENTION! Some fields have not been filled in.
 Invia_la_richiesta=Send the request
+Per_poter_vedere_e_scaricare_le_foto_devi_effettuare_il_login_ed_essere_in_regola_con_il_rinnovo_della_quota_associativa.=To view and download photos, you must log in and have a current membership fee.
+Se_sei_gia'_un_Socio_Ets_Regalami_un_Sorriso,_inserisci_il_tuo_Username_e_Password,_altrimenti_vai_alla_pagina_di=If you are already an Ets Regalami un Sorriso member, enter your Username and Password, otherwise go to the page
+FOTO_EVENTI=EVENT PHOTOS
+FOTO_SPORT=SPORTS PHOTOS
+Indirizzo:=Address:
+Società_di_appartenenza:=Company belonging to:
+Telefono:=Telephone:
+Email:=E-mail:
+Codice_Fiscale:=Tax ID code:
+Data_Scadenza:=Expiration Date:
+Num._foto_visualizzate/N._foto_Max:=No. of photos displayed/No. of photos max:
+Num._foto_visualizzate_oggi:=Number of photos viewed today:
+foto@pierogiacomelli.com=foto@pierogiacomelli.com
+Il_tuo_account_è_scaduto_oppure_hai_raggiunto_il_numero_di_foto_massimo_da_scaricare._Per_poter_scaricare/condividere_nuove_foto_effettua_il_rinnovo_della_quota_associativa.=Your account has expired or you've reached the maximum number of photos you can download. To download/share new photos, please renew your membership.
+Attenzione..._Per_poter_rinnovare_tramite_Coupon,_devi_completare_i_tuoi_dati_di_registrazione_con_tutti_i_campi_obbligatori=Attention... To renew via Coupon, you must complete your registration data with all mandatory fields.
+Attenzione..._Per_poter_rinnovare_tramite_PayPal,_devi_completare_i_tuoi_dati_di_registrazione_con_tutti_i_campi_obbligatori=Attention... To renew via PayPal, you must complete your registration data with all mandatory fields.
+visualizzazione_standard=standard view
+Hits:=Hits:
+Correndo,_sognando_e..._lottando=Running, dreaming and... fighting
+Regalami_Un_Sorriso_ETS_-_Pagina_Non_Trovata=Give Me A Smile ETS - Page Not Found
+Errror_404!_Ops!!!=Error 404! Oops!!!
+Pagina_Non_trovata........=Page Not Found........
+Regalami_Un_Sorriso_ETS_-_Correndo,_sognando_e..._lottando_-_Rivista_Atletica_Immagine=Give Me a Smile ETS - Running, Dreaming, and... Fighting - Athletics Magazine Image
+Atletica_Immagine=Athletics Image
+Chi_Siamo=Who We Are
+Totale_Record_:=Total Record:
+Pagina=Page
+di=Of
+Data.=Date.
+Titolo=Title
+Clicca_sull'immagine=Click on the image
+per_sfogliare_la_rivista=to browse the magazine
+Rivista=Magazine
+Scarica_Pdf=Download PDF
+Diventa_socio!=Become a member!
+Controllo_Se_Sei_Un_Umano=Check If You're Human
+Controlla=Check
