--- a/WEB-INF/classes/rus_en.properties
+++ b/WEB-INF/classes/rus_en.properties
@@ -65,7 +65,7 @@ foto=photo
 visualizzazione_compatta=compact view
 vai_a_pag.=go to page
 Inserisci_il_numero_di_pagina_e_premi_invio_o_'Procedi'=Enter the page number and press enter or 'Proceed'
-Hits:=Hits:
+Hits=Hits
 Se_vuoi_visualizzare_la_foto_di_qualità_migliore_effettua_il_login=If you want to view the best quality photo, log in.
 Login=Login
 Username=Username
@@ -79,7 +79,7 @@ pagina_di_login=login page
 oppure_se_non_sei_registrato,_vai_alla=or if you are not registered, go to
 pagina_di_registrazione=registration page
 Banca_IFIGEST_Prato=IFIGEST Bank Prato
-in_alternativa:=alternatively:
+in_alternativa=alternatively
 CONTO_CORRENTE_POSTALE_c/c_89587968=POSTAL CURRENT ACCOUNT c/c 89587968
 IBAN_IT_77H_07601_02800_0000_8958_7968=IBAN IT 77H 07601 02800 0000 8958 7968
 STATUTO=STATUTE
@@ -95,15 +95,15 @@ Accesso_Tramite_Facebook=Login via Facebook
 Area_Utente=User Area
 Visualizza_le_foto=View photos
 Ciao=HI
-Indirizzo:=Address:
+Indirizzo=Address
 n.=n.
-Società_di_appartenenza:=Company belonging to:
-Telefono:=Telephone:
-Email:=E-mail:
-Codice_Fiscale:=Tax ID code:
-Data_Scadenza:=Expiration Date:
-Num._foto_visualizzate/N._foto_Max:=No. of photos displayed/No. of photos max:
-Num._foto_visualizzate_oggi:=Number of photos viewed today:
+Società_di_appartenenza=Company belonging to
+Telefono=Telephone
+Email=E-mail
+Codice_Fiscale=Tax ID code
+Data_Scadenza=Expiration Date
+Num._foto_visualizzate/N._foto_Max=No. of photos displayed/No. of photos max
+Num._foto_visualizzate_oggi=Number of photos viewed today
 Verificate_che_i_dati_siano_corretti._Per_variazioni_scrivere_a=Please verify that the information is correct. For changes, please write to
 oppure_vai_su=or go to
 Modifica_Dati=Edit Data
@@ -121,7 +121,7 @@ Accetto=I accept
 La_concessione_della_password_di_accesso_a_questo_sito_è_subordinata_alla_presa_visione_della=Granting of the password to access this site is subject to viewing the
 ed_alla_accettazione_dei_punti_2.A_e_2.B_del_suddetto_regolamento=and acceptance of points 2.A and 2.B of the aforementioned regulation
 2.A_e_2.B=2.A and 2.B
-Attenzione:=Attention:
+Attenzione=Attention
 Per_poter_condividere_le_foto_è_necessario_essere_sostenitori_della_Ets.=To share photos you must be an Ets supporter.
 Con_un_contributo_liberale_di_20=With a liberal contribution of 20
 puoi_diventare_Socio_della_Ets_avrai_il_diritto_di_condividere_1000_foto_in_1_anno=You can become a member of Ets and you will have the right to share 1000 photos in 1 year.
@@ -151,20 +151,20 @@ Per_poter_vedere_e_scaricare_le_foto_devi_effettuare_il_login_ed_essere_in_regol
 Se_sei_gia'_un_Socio_Ets_Regalami_un_Sorriso,_inserisci_il_tuo_Username_e_Password,_altrimenti_vai_alla_pagina_di=If you are already an Ets Regalami un Sorriso member, enter your Username and Password, otherwise go to the page
 FOTO_EVENTI=EVENT PHOTOS
 FOTO_SPORT=SPORTS PHOTOS
-Indirizzo:=Address:
-Società_di_appartenenza:=Company belonging to:
-Telefono:=Telephone:
-Email:=E-mail:
-Codice_Fiscale:=Tax ID code:
-Data_Scadenza:=Expiration Date:
-Num._foto_visualizzate/N._foto_Max:=No. of photos displayed/No. of photos max:
-Num._foto_visualizzate_oggi:=Number of photos viewed today:
+Indirizzo=Address
+Società_di_appartenenza=Company belonging to
+Telefono=Telephone
+Email=E-mail
+Codice_Fiscale=Tax ID code
+Data_Scadenza=Expiration Date
+Num._foto_visualizzate/N._foto_Max=No. of photos displayed/No. of photos max
+Num._foto_visualizzate_oggi=Number of photos viewed today
 foto@pierogiacomelli.com=foto@pierogiacomelli.com
 Il_tuo_account_è_scaduto_oppure_hai_raggiunto_il_numero_di_foto_massimo_da_scaricare._Per_poter_scaricare/condividere_nuove_foto_effettua_il_rinnovo_della_quota_associativa.=Your account has expired or you've reached the maximum number of photos you can download. To download/share new photos, please renew your membership.
 Attenzione..._Per_poter_rinnovare_tramite_Coupon,_devi_completare_i_tuoi_dati_di_registrazione_con_tutti_i_campi_obbligatori=Attention... To renew via Coupon, you must complete your registration data with all mandatory fields.
 Attenzione..._Per_poter_rinnovare_tramite_PayPal,_devi_completare_i_tuoi_dati_di_registrazione_con_tutti_i_campi_obbligatori=Attention... To renew via PayPal, you must complete your registration data with all mandatory fields.
 visualizzazione_standard=standard view
-Hits:=Hits:
+Hits=Hits
 Correndo,_sognando_e..._lottando=Running, dreaming and... fighting
 Regalami_Un_Sorriso_ETS_-_Pagina_Non_Trovata=Give Me A Smile ETS - Page Not Found
 Errror_404!_Ops!!!=Error 404! Oops!!!
@@ -172,7 +172,7 @@ Pagina_Non_trovata........=Page Not Found........
 Regalami_Un_Sorriso_ETS_-_Correndo,_sognando_e..._lottando_-_Rivista_Atletica_Immagine=Give Me a Smile ETS - Running, Dreaming, and... Fighting - Athletics Magazine Image
 Atletica_Immagine=Athletics Image
 Chi_Siamo=Who We Are
-Totale_Record_:=Total Record:
+Totale_Record_=Total Record
 Pagina=Page
 di=Of
 Data.=Date.
@@ -184,3 +184,12 @@ Scarica_Pdf=Download PDF
 Diventa_socio!=Become a member!
 Controllo_Se_Sei_Un_Umano=Check If You're Human
 Controlla=Check
+Hits=Hits
+Indirizzo=Address
+Società_di_appartenenza=Company belonging to
+Telefono=Telephone
+Email=E-mail
+Codice_Fiscale=Tax ID code
+Data_Scadenza=Expiration Date
+Num._foto_visualizzate/N._foto_Max=No. of photos displayed/No. of photos max
+Num._foto_visualizzate_oggi=Number of photos viewed today
